<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="homework5.homework5.GameDetails">

    <VideoView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:paddingRight="10dp"
        android:id="@+id/videoView"
        android:layout_alignParentTop="true" />

    <TextView
        android:text="@string/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/videoView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:id="@+id/textViewOverview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="14dp"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/textViewOverview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:text="@string/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGenre"
        android:layout_below="@+id/scrollView2"
        android:layout_alignLeft="@+id/textViewOverview"
        android:layout_alignStart="@+id/textViewOverview"
        android:layout_marginTop="18dp" />

    <TextView
        android:text="@string/publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewGenre"
        android:layout_alignStart="@+id/textViewGenre"
        android:layout_below="@+id/textViewGenre"
        android:id="@+id/textView3" />

    <Button
        android:text="@string/playTrailer"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:id="@+id/buttonPlayTrailer"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <Button
        android:text="@string/similarGames"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonPlayTrailer"
        android:layout_alignLeft="@+id/buttonPlayTrailer"
        android:layout_alignStart="@+id/buttonPlayTrailer"
        android:id="@+id/button2" />

    <Button
        android:text="@string/finish"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:id="@+id/button3"
        android:layout_below="@+id/button2" />
</RelativeLayout>
